# wagtail-template

./: .envsample  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  manage.py  pyproject.toml
home/: Untitled.ipynb  models.py  tasks.py  testing_celery.ipynb
home/migrations/: 0002_create_homepage.py
project_conf/: celery.py  urls.py  wsgi.py
project_conf/settings/: base.py  dev.py  production.py
project_conf/templates/: base.html
